syntax = "proto3";

option go_package = "my-protobuf/protogen/basic";

enum Gender {
  GENDER_UNSPECIFIED = 0; // default value
  GENDER_FEMALE = 1; // penulisan enum dengan huruf besar
  GENDER_MALE = 2;
}

message User {
  uint32 id = 1;
  string username = 2;
  bool is_active = 3;
  bytes password = 4;

  // angka tidak harus urut, repeated untuk array 
  // (beberapa emails bisa diinputkan)
  repeated string emails = 16; 
  Gender gender = 17;
  Address address = 18;
}

// address sebagai tipe data di user  
message Address {
  string street = 1;
  string city = 2;
  string country = 3;
  Coordinate coordinate = 16;
  
  // neseted message biasanya menghasilkan object di dalam object
  // sedangkan import message menghasilkan array yang berisi object dari message
  // nested message (message di dalam message), lebih baik import message sih
  // tapi ini contoh nested message
  message Coordinate {
    double latitude = 1;
    double longitude = 2;
  }
}
